fix(frontend/controller): add spacing to info panel
fixes #493

--- a/app/frontend/src/Controller/ShabadInfo.css
+++ b/app/frontend/src/Controller/ShabadInfo.css
@@ -4,6 +4,11 @@
     color: var(--controller-text-color);
     background-color: var(--controller-background-color);
 }
+
+.popver-buttons {
+    margin-top: 10px;
+}
+
 .db-viewer-button{
     padding-right: 10px;
 }
